[package]
name = "hmac-predicate"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Tower predicate HMAC verification of query params"

[dependencies]
form_urlencoded = "*"
hex = "*"
hmac = "*"
http = "*"
sha2 = "*"
thiserror = "*"
tower = { version = "*", features = ["filter"] }
