[package]
name = "hmac-predicate"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Tower predicate HMAC verification of query params"

[dependencies]
form_urlencoded = ">= 1"
hex = ">= 0"
hmac = ">= 0"
http = ">= 0"
sha2 = ">= 0"
thiserror = ">= 1"
tower = { version = ">= 0", features = ["filter"] }
