[package]
name = "hmac-predicate"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Tower predicate HMAC verification of query params"
homepage = "https://github.com/tobymurray/hmac-predicate"
repository = "https://github.com/tobymurray/hmac-predicate"

[dependencies]
form_urlencoded = ">= 1"
hex = ">= 0"
hmac = ">= 0"
http = ">= 0"
sha2 = ">= 0"
thiserror = ">= 1"
tower = { version = ">= 0", features = ["filter"] }
http-body = ">= 0"
bytes = ">= 0"
